--- a/. github/workflows/go-build.yml
+++ b/. github/workflows/go-build.yml
@@ -3,11 +3,12 @@ name: Build on Merge
 on:
   pull_request:
     types: [closed]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
