--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -16,5 +16,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: 'stable'
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y \
+          libgl-dev \
+          libxcursor-dev \
+          libxrandr-dev \
+          libxinerama-dev \
+          libxi-dev
       - name: Build
         run: go build ./...
